# outlap

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_RECOMMENDATION.md  MASTER_SPEC.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/raceweek/: agents.py  cli.py  main.py  settings.py
apps/api/src/raceweek/api/: data_first_routes.py  import_routes.py  routes.py
apps/api/src/raceweek/connectors/: __init__.py  base.py  fantasy_normalize.py  fantasy_readonly.py  fastf1_adapter.py  import_template_contracts.py  import_templates.py  jolpica.py  jolpica_normalize.py  manual.py  manual_types.py  manual_utils.py  news.py  openf1.py
apps/api/src/raceweek/core/: chip_simulator.py  models.py  optimizer.py  optimizer_bruteforce.py  optimizer_options.py  optimizer_ortools.py  optimizer_requests.py  optimizer_scoring.py  projections.py  rules.py  strategy.py
apps/api/src/raceweek/providers/: __init__.py  adapters.py  official.py  parsing.py  registry.py  specs.py
apps/api/src/raceweek/storage/: demo.py  fixtures.py  jsonio.py  repository.py  runs.py  seed.py
apps/api/src/raceweek/storage/migrations/: 0001_init.sql  0002_core_state.sql  (+2 more)
apps/api/tests/: conftest.py  test_agent_guardrails.py  test_api.py  test_cli.py  test_data_first_real_api.py  test_data_source_status_contract.py  test_fantasy_readonly_connector.py  test_fastf1_adapter.py  test_jolpica_connector.py  test_manual_import.py  test_news_connector.py  test_official_provider_adapters.py  test_openf1_connector.py  test_optimizer.py  test_optimizer_chips.py  test_optimizer_custom.py  test_projections.py  test_providers.py  test_race_context_data_first.py  test_rules.py  test_settings.py  test_storage.py
examples/: .env.example  Makefile  docker-compose.yml  package.json  pyproject.toml  web-package.json
examples/fixtures/: fantasy_market_demo.json  fantasy_team_demo.json  news_demo.json
examples/prompts/: agent-system-prompt.md
(+119 files in other folders)
