[project]
name = "raceweek-strategist-api"
version = "1.0.0"
description = "Local-first API for RaceWeek Strategist."
readme = "../../README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn==0.49.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "httpx==0.28.1",
  "orjson==3.11.9",
  "duckdb==1.5.3",
  "python-dotenv==1.2.2",
  "ortools==9.15.6755",
]

[project.scripts]
raceweek = "raceweek.cli:main"

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "ruff==0.15.16",
  "mypy==2.1.0"
]

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raceweek"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
